ui/src/components/Field/ValueField.css
/*
 * Copyright 2018 - 2021 Swiss Federal Institute of Technology Lausanne (EPFL)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0.
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * This open source software code was developed in part or in whole in the
 * Human Brain Project, funded from the European Union's Horizon 2020
 * Framework Programme for Research and Innovation under
 * Specific Grant Agreements No. 720270, No. 785907, and No. 945539
 * (Human Brain Project SGA1, SGA2 and SGA3).
 *
 */

.kgs-field .kgs-thumbnail--panel {
    display: inline-block;
    position: relative;
}

.kgs-field .kgs-thumbnail--panel > div {
    display: inline-block;
    max-width: 16px;
    height: 16px;
    margin: 0 10px;
    transform: translate(-2px, -4px);
}

.kgs-field .kgs-thumbnail--panel img {
    width: auto;
    height: 100%;
    max-width: 32px;
}

.kgs-field .field-value {
    display: inline-block;
    position: relative;
    margin: 0;
    padding: 0;
    overflow-wrap: break-word;
    word-break: break-word;
    white-space: pre-wrap;
    vertical-align: baseline;
    line-height: 1.5em;
}

.kgs-field p.field-value {
    margin: 0;
}

.kgs-field .field-value button[role="link"] {
    margin: 0;
    padding: 0;
    border: 0;
    background-color: transparent;
    text-decoration: none;
    color: var(--link-color-1);
    text-align: left;
}

.kgs-field .field-value button[role="link"]:hover {
    color: var(--link-color-active);
}

.kgs-field .field-value a,
.kgs-field .field-value a:visited {
    text-decoration: none;
    color: var(--link-color-1);
}

.kgs-field .field-value a:focus,
.kgs-field .field-value a:hover {
    text-decoration: none;
    color: var(--link-color-active);
}

.kgs-field .kgs-hint {
    margin-right: 10px;
    color: var(--color-8);
}

.kgs-field__highlights{
    font-size:var(--font-size-smaller);
}
.kgs-field__highlights .field-label {
    font-size:var(--font-size-smaller);
}

/**********************************************************************************************************************/

[data-type] .kgs-field__type .field-value {
    text-transform: uppercase;
    word-break: keep-all;
    white-space: nowrap;
    font-size: var(--font-size-big);
    color: var(--color-24);
}

.kgs-field.kgs-field__icon {
    width: 35px;
    height: 35px;
    max-width: 60px;
}

.kgs-field__icon>i {
    font-size: 50px;
    color: #707070;
    padding: 5px 9px;
}

.kgs-field__icon>div>svg {
    width:35px;
    height:35px;
}

.kgs-field .field-value__tag div>svg>path {
    fill: var(--color-20);
}


/**********************************************************************************************************************/

